# semantic-cache-middleware

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  routes.rs  state.rs  tests.rs
src/services/: cache.rs  embedding.rs  mod.rs  ollama.rs
