[package]
name = "semantic-cache-middleware"
version = "0.1.0"
edition = "2024"
description = "A middleware that semantically caches LLM responses to avoid repetitive API calls"
license = "MIT"
repository = "https://github.com/LyesHADJAR/semantic-cache-middleware"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
reqwest = { version = "0.13.2" , features = ["json"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
