[package]
name = "semantic-cache-middleware"
version = "0.1.0"
edition = "2024"
description = "A middleware that semantically caches LLM responses to avoid repetitive API calls"
license = "MIT"
repository = "https://github.com/LyesHADJAR/semantic-cache-middleware"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
reqwest = { version = "0.13.2" , features = ["json"] }
rust-bert = "0.23.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
console = { version = "0.16.2", features = ["std"] }
indicatif = "0.18.3"
dashmap = "6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
moka = { version = "0.12.14", features = ["sync"] }
async-trait = "0.1.89"
